<resources>
    <string name="app_name">Contacto</string>
    <string name="nombre">Francisco Ramírez</string>
    <string name="telefono">987535717</string>
    <string name="email">frisco9030@gmail.com</string>
    <string name="fecha">12/09/90</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="pfecha">Fecha de Nacimiento</string>
    <string name="siguiente">Siguiente</string>
    <string name="descripcion">descripcion</string>
    <string name="pdescripcion">descripcion</string>
    <string name="cfecha">Fecha</string>
    <string name="datos">Confirmar Datos</string>
</resources>
